CC=gcc
OBJS=f1g_basic_funcs.o f1g_string.o f1g_url_parser.o f1g_log.o f1g_cmd_line.o f1g_data_op.o f1g_eth_scrapy.o f1g_bit_array.o f1g_http.o f1g_http_parser.o \
	f1g_template.o f1g_data_set.o f1g_net_forge.o f1g_lang_code.o f1g_server.o f1g_smart_conf.o f1g_queue.o f1g_accessor.o f1g_buffer.o f1g_regset.o bitree.o

.PHONY:clean

clean:
